update game engine
